# pgqrs

./: .gitignore  AGENTS.md  BUG_REPORT_TURSO_RETRY.md  CHANGELOG.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  PR_REVIEW_TASKS.md  README.md  WORKFLOW_RESTART_BUG.md  mkdocs.yml  release-plz.toml  release.toml
apps/pgqrs/: Cargo.toml  README.md
apps/pgqrs/src/: commands.rs  error.rs  main.rs  output.rs
apps/pgqrs/tests/: cli_tests.rs  healthcheck_integration.rs
benchmarks/: .gitignore  Makefile  README.md  __init__.py  pyproject.toml
benchmarks/bench/: __init__.py  baselines.py  cli.py  flatten.py  loader.py  registry.py  reporting.py  results.py  runtime.py  schema.py  toxiproxy.py
benchmarks/bench/backends/: __init__.py  postgres.py  s3.py  sqlite.py  turso.py
benchmarks/bench/env/: __init__.py  aws.py  localstack.py  reset.py
benchmarks/dashboard/: app.py  data.py
benchmarks/dashboard/views/: backend_summary.py  compare.py  runs.py  trends.py
benchmarks/data/: README.md
benchmarks/data/baselines/queue.drain_fixed_backlog/: 20260402T161856Z-s3-rust-compat.jsonl  postgres-rust-compat-release-20260321.jsonl  s3-rust-single_process-baseline-20260331.jsonl  sqlite-rust-compat-release-20260321.jsonl
benchmarks/executors/: README.md
benchmarks/executors/python/: __init__.py  queue.py  workflow.py
benchmarks/executors/rust/: Cargo.toml  README.md
benchmarks/executors/rust/src/: main.rs
benchmarks/scenarios/: README.md
benchmarks/scenarios/queue/: _template.toml  coarse_job_viability.toml  drain_fixed_backlog.toml  e2e_capacity_knee.toml  e2e_steady_state.toml
benchmarks/scenarios/workflow/: _template.toml
benchmarks/scripts/: export_docs_charts.py
crates/pgqrs/: Cargo.toml  Makefile  README.md
crates/pgqrs-client/: Cargo.toml  build.rs
crates/pgqrs-client/examples/: basic_client.rs
crates/pgqrs-client/src/: codec.rs  error.rs  lib.rs
crates/pgqrs-client/tests/: healthcheck.rs  postgres_healthcheck.rs
crates/pgqrs-core/: Cargo.toml
crates/pgqrs-core/migrations/: 0001_create_pgqrs_schema.sql  README.md
crates/pgqrs-core/src/: constants.rs  error.rs  lib.rs  pg_impl.rs  pgqrs_impl.rs  pool.rs  traits.rs
crates/pgqrs-core/tests/: pg_impl.rs  pgqrs_impl.rs
crates/pgqrs-macros/: Cargo.toml  README.md
crates/pgqrs-macros/src/: lib.rs
crates/pgqrs-server/: Cargo.toml  build.rs  config.test.yaml  config.yaml
crates/pgqrs-server/migrations/: 0001_create_pgqrs_schema.sql  README.md
crates/pgqrs-server/src/: api.rs  cli.rs  config.rs  lib.rs  main.rs  service.rs
crates/pgqrs-server/src/db/: admin.rs  config.rs  constants.rs  error.rs  init.rs  mod.rs  pgqrs_impl.rs  pool.rs  repo.rs  traits.rs
crates/pgqrs-server/tests/: admin_tests.rs  api_tests.rs  cli_tests.rs  healthcheck.rs  pgqrs_impl.rs
crates/pgqrs-test-utils/: Cargo.toml
crates/pgqrs-test-utils/src/: helpers.rs  lib.rs  mocks.rs  postgres.rs  server.rs
crates/pgqrs/benchmark/: init_tables.sql  locustfile.py  logs.out  plot_section3_wal.py  requirements.txt  section3_wal_data.csv
crates/pgqrs/docs/api/: sidebar-items.js  struct.RateLimitStatus.html
crates/pgqrs/examples/: basic_usage.rs  count_methods.rs
crates/pgqrs/migrations/: 0006_create_workflow_tables.sql  0007_add_step_retry_columns.sql
crates/pgqrs/migrations/postgres/: 0001_create_worker_status_enum.sql  0003_create_worker_table.sql  0004_create_messages_table.sql  0005_create_archive_table.sql  0006_create_workflow_tables.sql  0007_add_archived_at_to_messages.sql  0007_add_workflow_cancellation.sql
crates/pgqrs/migrations/sqlite/: 01_create_queues.sql  02_create_workers.sql  03_create_messages.sql  04_create_archive.sql  05_create_workflows.sql  06_add_archived_at.sql  06_add_step_retry_columns.sql  06_add_workflow_cancellation.sql
crates/pgqrs/migrations/turso/: 00_create_schema_version.sql  02_create_workers.sql  04_create_archive.sql  (+7 more)
crates/pgqrs/scripts/: create_issues_funcs.sh
crates/pgqrs/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  output.rs  policy.rs  rate_limit.rs  stats.rs  tables.rs  test_utils.rs  types.rs  validation.rs  workers.rs  workflow.rs
crates/pgqrs/tests/: anystore_tests.rs  builder_ergonomics_tests.rs  builder_tests.rs  cli_fast_tests.rs  cli_tests.rs  concurrent_tests.rs  default_schema_tests.rs  ephemeral_worker_tests.rs  error_tests.rs  guide_tests.rs  lib_pgbouncer_tests.rs  lib_stat_tests.rs  lib_tests.rs  macro_tests.rs  retry_policy_tests.rs  s3_localstack_smoke.rs  s3_tests.rs  setup_test_db.rs  sqlite_tests.rs  turso_hardening.rs  worker_tests.rs  workflow_creation_tests.rs  workflow_retry_integration_tests.rs  workflow_table_insert_tests.rs  workflow_tests.rs  zombie_tests.rs
pgqrs/: Cargo.toml  README.md  build.rs
pgqrs/examples/: basic_client.rs
pgqrs/src/: error.rs  lib.rs
pgqrs/src/cli/: args.rs  commands.rs  mod.rs  output.rs
pgqrs/src/client/: client.rs  mod.rs
pgqrs/tests/: api_tests.rs  mock_api_tests.rs  mock_healthcheck.rs  postgres_healthcheck.rs
py-pgqrs/: .gitignore  Cargo.toml  README.md  pyproject.toml
py-pgqrs/examples/: crash_recovery.py  retry_types_demo.py  simple_workflow.py
py-pgqrs/python/pgqrs/: __init__.py  __init__.pyi  decorators.py
py-pgqrs/src/: builder.rs  enum.rs  errors.rs  lib.rs  tables.rs  workers.rs  workflow.rs
py-pgqrs/tests/: conftest.py  test_agent_workflow_orchestration.py  test_archive.py  test_basic.py  test_batch.py  test_builders.py  test_concurrency.py  test_config.py  test_consumer_delete.py  test_delayed.py  test_ergonomics.py  test_guides.py  test_pgqrs.py  test_retry.py  test_s3_store_handle.py  test_visibility.py  test_worker.py  test_worker_trait.py  test_workflow_lifecycle.py  test_workflow_retrieval.py  test_workflow_retry_integration.py
tests/: Cargo.toml  cli_tests.rs  default_schema_tests.rs  error_tests.rs  integration_tests.rs  lib_pgbouncer_tests.rs  lib_stat_tests.rs  lib_tests.rs  worker_tests.rs  zombie_tests.rs
tests/common/: constants.rs  container.rs  database_setup.rs  mod.rs  pgbouncer.rs  postgres.rs
tests/src/: lib.rs
(+368 files in other folders)
