[package]
name = "pgqrs"
version = "0.1.0"
edition = "2021"
description = "A high-performance PostgreSQL-backed job queue for Rust applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vrajat/pgqrs"
keywords = ["queue", "postgresql", "async", "workflows", "cli"]
categories = ["command-line-interface"]

readme = "README.md"

include = [
    "src/**",
    "migrations/**",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "pgqrs"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres"] }

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json"] }
r2d2 = "0.8.10"
diesel_migrations = "2.1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_yaml = "0.9"
