[workspace]
members = [
    "crates/pgqrs",
    "crates/pgqrs-macros",
    "py-pgqrs",
]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vrajat/pgqrs"
homepage = "https://github.com/vrajat/pgqrs"
authors = ["Rajat Venkatesh"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = 0
