[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pgqrs-benchmarks"
version = "0.1.0"
description = "Benchmark orchestration and dashboard scaffold for pgqrs"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.43",
    "typer>=0.16",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["benchmarks*"]

[tool.ruff]
target-version = "py311"
