[package]
name = "py-pgqrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pgqrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
pgqrs = { path = "../crates/pgqrs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
