[package]
name = "py-pgqrs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "_pgqrs"
crate-type = ["cdylib"]

[features]
default = ["postgres"]
full = ["pgqrs/full"]
postgres = ["pgqrs/postgres"]
sqlite = ["pgqrs/sqlite"]
turso = ["pgqrs/turso"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
pgqrs = { path = "../crates/pgqrs", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
gethostname = "0.4"
uuid = { version = "1", features = ["v4"] }
