[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pgqrs"
version = "0.4.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "testcontainers[postgres]>=3.7",
    # urllib3 is pinned to <2.0 due to testcontainers not yet supporting urllib3>=2.0. Remove this pin when testcontainers adds support.
    "urllib3<2.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning"
]
