[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pgqrs"
version = "0.5.0"
description = "PostgreSQL-backed job queue with Rust and Python bindings"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Rajat Venkatesh" },
]
keywords = ["postgresql", "queue", "task-queue", "background-jobs", "job-queue"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "psycopg[binary]>=3.0",
]

[project.urls]
Homepage = "https://github.com/vrajat/pgqrs"
Repository = "https://github.com/vrajat/pgqrs"
Documentation = "https://github.com/vrajat/pgqrs"
"Issue Tracker" = "https://github.com/vrajat/pgqrs/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "testcontainers[postgres]>=3.7",
    # urllib3 is pinned to <2.0 due to testcontainers not yet supporting urllib3>=2.0. Remove this pin when testcontainers adds support.
    "urllib3<2.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning"
]

[tool.maturin]
python-source = "python"
module-name = "pgqrs._pgqrs"
