[package]
name = "pgqrs-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for pgqrs queue service"
authors = ["pgqrs contributors"]

[[bin]]
name = "pgqrs"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Table formatting
tabled = "0.16"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
tonic = "0.14.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Color and terminal
colored = "2.1"

# Time handling for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
pgqrs-client = { path = "../../crates/pgqrs-client" }

[dev-dependencies]
tempfile = "3.13"
pgqrs-test-utils = { path = "../../crates/pgqrs-test-utils" }
tokio-test = "0.4"