[package]
name = "pgqrs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
pgqrs-test-utils = { path = "../pgqrs-test-utils" }
