[package]
name = "pgqrs-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macro support crate for pgqrs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
