[lib]
name = "pgqrs_server"
path = "src/lib.rs"

[[bin]]
name = "pgqrs-server"
path = "src/main.rs"
[package]
name = "pgqrs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-health = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
async-trait = "0.1"
tokio-stream = "0.1"
chrono = "0.4"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing-subscriber = "0.3"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
pgqrs-test-utils = { path = "../pgqrs-test-utils" }
serde_json = "1.0"
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
