[package]
name = "pgqrs-test-utils"
version = "0.1.0"
edition = "2021"
description = "Shared test utilities for PGQRS"

[dependencies]
pgqrs-server = { path = "../pgqrs-server" }
pgqrs = { path = "../../pgqrs" }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
diesel = { version = "2.3", features = ["postgres", "r2d2"] }
tracing = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.2"