[package]
name = "pgqrs-bench-rust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[features]
default = []
postgres = ["pgqrs/postgres"]
sqlite = ["pgqrs/sqlite"]
turso = ["pgqrs/turso"]
s3 = ["pgqrs/s3"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pgqrs = { path = "../../../crates/pgqrs", default-features = false }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
